m-width fix and contact details gap on mobile

--- a/app/_components/company-details/CompanyDetails.module.css
+++ b/app/_components/company-details/CompanyDetails.module.css
@@ -1,6 +1,7 @@
 .CompanyDetails {
   display: flex;
   flex-direction: column;
+  margin-top: 4rem;
 }
 
 .CompanyDetails p {
@@ -45,4 +46,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media (min-width: 768px) {
+  .CompanyDetails {
+    margin-top: 0;
+  }
 }
