--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@ p {
 }
 
 .container {
-  max-width: 124rem;
+  max-width: 116rem;
   margin: 0 auto;
   padding: 0 1.6rem;
   position: relative;
